# toneapi

./: .clang-format  CMakeLists.txt  README.md
cmake/: TONEAPIConfig.cmake  toneapiConfig.cmake.in
include/: ipps_exports.txt  ippvm_exports.txt  mkl_sequential_blass.txt  mkl_sequential_dft.txt  mkl_sequential_lapack.txt  mkl_sequential_sparse.txt  tipp.hpp  tipp_error.hpp  tipp_vector.hpp  tipps.hpp  tipps_classes.hpp  tipps_essentials_arthimetic.hpp  tipps_essentials_convert.hpp  tipps_essentials_logical.hpp  tipps_essentials_sampling.hpp  tipps_essentials_statistical.hpp  tipps_filter.hpp  tipps_fixedaccuracy.hpp  tipps_initialization.hpp  tipps_support.hpp  tipps_transform.hpp  tipps_vector.hpp  tippvm.hpp  tmkl.hpp  toneapi.hpp
include/tipp/: cv_arithmetic.hpp  cv_morphology.hpp  cv_morphology_engines.hpp  i_alpha.hpp  i_arithmetic.hpp  i_arithmetic_add.hpp  i_arithmetic_div.hpp  i_arithmetic_mul.hpp  i_arithmetic_sub.hpp  i_logical.hpp  s_arithmetic.hpp  s_arithmetic_span.hpp  s_arithmetic_vector.hpp  s_conversion.hpp  s_conversion_engines.hpp  s_filtering.hpp  s_filtering_engines.hpp  s_initialization.hpp  s_initialization_engines.hpp  s_logical.hpp  s_sampling.hpp  s_statistical.hpp  s_support.hpp  s_transforms.hpp  s_transforms_engines.hpp  s_transforms_extras.hpp  s_windowing.hpp  tipp_error.hpp  tipp_extras.hpp  tipp_image.hpp  tipp_type.hpp  tipp_vector.hpp  tippcv.hpp  tippcv_morphology.hpp  tippcv_morphology_engines.hpp  tippi.hpp  tippi_morphology_engines.hpp  tipps.hpp  tipps_engines.hpp  tippvm.hpp
include/tmkl/: transforms.hpp
include/toneapi/: tipps.hpp  tipps_engines.hpp  vm.hpp
ipps/: ippcore_exports.txt  tipp.hpp  tipp_error.hpp  tipps.hpp  tipps_filter.hpp  vm.hpp
src/: tipp_error.hpp  tipps.hpp  tipps_engines.hpp
